finalize implementation + unit test
